2003-08-04  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/epsonepl-Density.xml: Fixed defaults.

	* opt/epsonepl-FlowControl.xml: Added "FlowControl" option to
	  the "eplXXXXl" drivers.

2003-08-02  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Brother-HL-5030.xml, printer/Brother-HL-5050.xml,
	  printer/Brother-HL-5070N.xml, driver/hl1250.xml,
	  driver/pxlmono.xml, driver/lj5gray.xml, driver/lj5mono,
	  driver/ljet4.xml, driver/Postscript.xml, opt/160.xml,
	  opt/56.xml, opt/87.xml, opt/Brother-MediaType.xml: Added Brother
	  HL-5030, HL-5050, HL-5070N.

	* opt/87.xml, opt/160.xml, driver/lj5gray, driver/lj5mono: Added
	  Brother HL-5040.

	* opt/56.xml: Excluded Brother HL-5040, as it uses the
	  opt/Brother-MediaType.xml option instead of this one.

	* opt/Brother-MediaType.xml: Added "MediaType" option for Brother
	  laser printers.

	* pxlmono-PrinterResolution.xml, opt/pxlmono-PrintoutMode.xml:
	  Made 1200 dpi available for Brother´s PCL-6 printers.

	* opt/159.xml: Removed all constraints concerning the "pxlmono"
	  and "pxlcolor" drivers. This option does not serve for these
	  drivers any more. Allowed 1200 dpi for Brother printers and the
	  "lj5gray"/"lj5mono" drivers. This resolution gives correct
	  output.

2003-08-01  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/pxlmono-JCLResolution.xml, opt/pxlmono-GSResolution.xml,
	  opt/pxlmono-PrinterResolution.xml, opt/pxlmono-PrintoutMode.xml:
	  Made the resolution option for the "pxlmono"/"pxlcolor" drivers
	  a forced composite option which both controls a switch on the
	  GhostScript comman line and inserts a PJL command. Added
	  "QualityType" PJL option to "PrintoutMode".

	* opt/183.xml, opt/184.xml, opt/PJL-PJLBinding.xml,
	  opt/PJL-PJLDuplex.xml, opt/PJL-Duplex.xml: Put the "SET DUPLEX"
	  and "SET BINDING" PJL options together with a forced composite
	  option to have a "Duplex" option with the three standard choices
	  (Off, Long Edge, Short Edge).
