@@ -12,7 +12,7 @@
     </resolution>
     <consumables>
       <comments>
-        <en>cartridge</en>
+        <en>1 black and 1 color (CMY) cartridge</en>
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
@@ -25,12 +25,21 @@
   </lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>F</functionality><!--unknown preferred "driver"-->
-  <unverified/><!--no "contrib_url"-->
+  <functionality>D</functionality><!--unknown preferred "driver"-->
+  <contrib_url>http://users.skynet.be/pjvh/ww150c/</contrib_url>
   <comments>
-    <en>Well, I&apos;m trying to figure out
-how to get this working, but
-I think that this printer is a 
-paperweight.</en>
+    <en>
+
+    Pieter-Jan Vandormael (pjv at skynet dot be) has started
+    development of a &lt;a
+    href="http://users.skynet.be/pjvh/ww150c/"&gt;driver&lt;/a&gt; for
+    this printer. One can at least print in black and white
+    now.&lt;p&gt;
+
+    Please test the driver (also on the other Winwriters) and direct
+    all bug reports, suggestions, and contributions to
+    Pieter-Jan.&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
