@@ -1,3 +1,8 @@
+2003-08-05  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Lexmark-Winwriter_150c.xml: There is a driver for this
+	  printer now, raised it to "Partially" and updated the text.
+
 2003-08-04  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* opt/epsonepl-Density.xml: Fixed defaults.
